<resources>
    <string name="app_name">InSense</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mail_text">Mail</string>
    <string name="google_text">Google</string>
    <string name="backgo">Вернутся</string>
    <string name="save_activity">Утвердить</string>
    <string name="categories_SPORT">СПОРТ</string>
    <string name="categories_MUSIC">МУЗЫКА</string>
    <string name="categories_STUDY">УЧЕБА</string>
    <string name="categories_WORK">РАБОТА</string>
    <string name="categories_HOBBY">ХОББИ</string>
    <string name="categories_FAMILY">СЕМЬЯ</string>
    <string name="categories_OTHER">ДРУГОЕ</string>
    <string name="email">Почта</string>
    <string name="change">изменить</string>
    <string name="enter_email_to_change_password">Ведите почту для смены пароля</string>
    <string name="password">Пароль</string>
    <string name="enter">вход</string>
    <string name="registration">регистрация</string>
    <string name="add">добавить</string>
    <string name="about_action">О ЗАНЯТИИ</string>
    <string name="calendar_description">\Описание: %1$s\</string>
    <string name="calendar_occupation">\Занятие: %1$s\</string>
    <string name="calendar_time">\Время: %1$s\</string>
    <string name="calendar_space">\%1$s  \%2$s</string>
    <string name="something">something</string>
    <string name="InTime">In Time</string>
    <string name="categories_categories">Категории</string>
    <string name="edit_activity_name">Название</string>
    <string name="start_time_of_activity">Выберите время начала действия</string>
    <string name="end_time_of_activity">Выберите время конца действия</string>
    <string name="delete">удалить</string>
    <string name="dialog_list_description">Описание</string>
    <string name="profile">Профиль</string>
    <string name="profile_email">Почта:</string>
    <string name="profile_all_activities">Всего активностей:</string>
    <string name="profile_analyse_activities">Анализ категорий</string>
    <string name="profile_sport">Спорт:</string>
    <string name="profile_music">Музыка:</string>
    <string name="profile_study">Учеба:</string>
    <string name="profile_work">Работа:</string>
    <string name="profile_other">Другое:</string>
    <string name="profile_hobby">Хобби:</string>
    <string name="profile_family">Семья:</string>
</resources>