<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.tabs.categories.CategoriesFragment"
    android:background="#0F0635">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="300dp"
            android:layout_height="540dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <Button
                    android:id="@+id/button_sport"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#29E1CD"
                    android:text="@string/categories_SPORT"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/button_music"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#29E1CD"
                    android:text="@string/categories_MUSIC"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/button_study"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#29E1CD"
                    android:text="@string/categories_STUDY"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/button_work"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#29E1CD"
                    android:text="@string/categories_WORK"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/button_hobby"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#29E1CD"
                    android:text="@string/categories_HOBBY"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/button_family"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#29E1CD"
                    android:text="@string/categories_FAMILY"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/button_other"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#29E1CD"
                    android:text="@string/categories_OTHER"
                    android:textColor="@color/black" />

            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/categories_categories"
            android:textSize="30sp"
            android:textColor="#29E1CD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>